--- a/package.json
+++ b/package.json
@@ -46,9 +46,10 @@
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
     "geist": "^1.3.1",
+    "highlight.js": "^11.11.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "14.2.16",
+    "next": "^14.2.32",
     "next-themes": "^0.4.6",
     "react": "^18",
     "react-day-picker": "9.8.0",
