--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "deploy:do": "doctl apps create --spec .do/app.yaml"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.6.0",
+    "monaco-editor": "^0.47.0",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
